[project]
name = "ComfyUI-Kitchen-nvfp4-converter"
description = "Convert to nvfp4, support Z-image-turbo, flux.1 and more"
version = "1.6.0"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Kitchen_nvfp4_Converter"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Kitchen-nvfp4-Converter"
Icon = ""




































